092_lls/grade.txt
Grading at 11/10/2021:19:46:59.559046
For commit ID 358c63183fca938f6170de830f47089d315d8c9a
Grading at Wed Nov 10 14:46:59 EST 2021
-----------------------------------------------
testcase 1 : Testing with LinkedList<int>
...compiling...
In file included from tester.cpp:5:0:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = int]’:
tester.cpp:100:11:   required from here
ll.hpp:59:12: error: invalid initialization of reference of type ‘LinkedList<int>&’ from expression of type ‘LinkedList<int>::Node*’
     return head;
            ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with LinkedList<std::string>
...compiling...
In file included from tester.cpp:5:0:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = std::__cxx11::basic_string<char>]’:
tester.cpp:100:11:   required from here
ll.hpp:59:12: error: invalid initialization of reference of type ‘LinkedList<std::__cxx11::basic_string<char> >&’ from expression of type ‘LinkedList<std::__cxx11::basic_string<char> >::Node*’
     return head;
            ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with LinkedList<(a custom class we wrote)>
...compiling...
In file included from tester.cpp:5:0:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = Tester]’:
tester.cpp:100:11:   required from here
ll.hpp:59:12: error: invalid initialization of reference of type ‘LinkedList<Tester>&’ from expression of type ‘LinkedList<Tester>::Node*’
     return head;
            ^~~~
The code did not compile.  This test failed.

Overall Grade: F
